--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> CUS1166 Welcome Page! </title>
+    <head>
+      <body>
+        {%block body %}
+        {% endblock %}
+
+        </body>
+        </html>
 
